# raspbot-marker-localization

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/calibration/: mapx.npy  mapy.npy
docs/: architecture.md  coordinate_system.md  machine_learning.md  marker_definition.md  media_notes.md  refactor_notes.md  sample_result.md
models/: model2.pkl
src/marker_localization/: __init__.py  config.py  types.py
src/marker_localization/app/: run_offline_demo.py
src/marker_localization/localization/: geometry.py  pose_estimator.py
src/marker_localization/navigation/: motor_model.py  target_planner.py
src/marker_localization/vision/: calibration.py  marker_decoder.py  marker_detector.py  visualization.py
